[package]
name = "inullify"
version = "0.1.0"
authors = ["Jeremiah Shaulov <jeremiah.shaulov@gmail.com>"]
keywords = ["server-guard", "antivirus"]
categories = ["command-line-utilities", "filesystem"]
description = "Watch directories, and truncate dangerous files."
license = "MIT"

[dependencies]
getopts = "0.2"
inotify = "0.4"
regex = "1"
time = "0.1"
