[package]
name = "inullify"
version = "0.1.4"
authors = ["Jeremiah Shaulov <jeremiah.shaulov@gmail.com>"]
edition = "2018"
keywords = ["server-guard", "antivirus"]
categories = ["command-line-utilities", "filesystem"]
description = "Watch directories, and truncate dangerous files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeremiah-shaulov/inullify"

[dependencies]
getopts = "0.2"
inotify = "0.4"
regex = "1"
time = "0.1"
